--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,14 @@
             <version>5.1.37</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.15.2</version>
+        </dependency>
 
- 	</dependencies>
+
+
+    </dependencies>
 </project>
